FILE(GLOB_RECURSE TOOLKIT_HEADERS CONFIGURE_DEPENDS 
    "src/*.hpp"
)

FILE(GLOB_RECURSE TOOLKIT_BUILD_FILES CONFIGURE_DEPENDS 
    "src/*.cpp"
)

SET(TOOLKIT_RESOURCES     "${CMAKE_CURRENT_SOURCE_DIR}/resources")
SET(TOOLKIT_RESOURCE_FILE "${CMAKE_CURRENT_SOURCE_DIR}/resources/app.rc")

ADD_EXECUTABLE(dvsku_toolkit
    ${TOOLKIT_RESOURCE_FILE}
    ${TOOLKIT_HEADERS}
	${TOOLKIT_BUILD_FILES}
)

SET_TARGET_PROPERTIES(dvsku_toolkit PROPERTIES OUTPUT_NAME "dvsku toolkit")

TARGET_LINK_OPTIONS(dvsku_toolkit PRIVATE "/SUBSYSTEM:WINDOWS")

TARGET_INCLUDE_DIRECTORIES(dvsku_toolkit PRIVATE "${TOOLKIT_LIBRARIES_DIR}")
TARGET_INCLUDE_DIRECTORIES(dvsku_toolkit PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
TARGET_INCLUDE_DIRECTORIES(dvsku_toolkit PRIVATE "${DV_GUI_INCLUDES}")

TARGET_LINK_LIBRARIES(dvsku_toolkit PRIVATE dv_gui_opengl2)
